--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "run-s codegen:* format check:* \"build-only {@}\" --",
     "build-only": "vite build",
     "check:type": "vue-tsc --build --force",
-    "codegen:web-api-client": "openapi --input https://raw.githubusercontent.com/Basketball-Competition-Dashboard/doc/main/api/web/openapi.yml --output src/codegen/web-api-client",
+    "codegen:web-api-client": "openapi-ts --input https://raw.githubusercontent.com/Basketball-Competition-Dashboard/doc/main/api/web/openapi.yml --output src/codegen/web-api-client",
     "dev": "run-s codegen:* dev-only",
     "dev-only": "vite dev",
     "format": "prettier --write .",
@@ -22,6 +22,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "0.46.3",
     "@iconify/vue": "^4.1.2",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
@@ -32,7 +33,6 @@
     "cypress": "^13.9.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.2.0",
-    "openapi-typescript-codegen": "0.29.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.1",
     "start-server-and-test": "^2.0.3",
