--- a/package.json
+++ b/package.json
@@ -4,41 +4,41 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "run-s codegen:* format check:* \"build-only {@}\" --",
+    "build": "run-s codegen-* format check-* \"build-only {@}\" --",
     "build-only": "vite build",
-    "check:type": "vue-tsc --build --force",
-    "codegen:web-api-client": "openapi-ts --input https://raw.githubusercontent.com/Basketball-Competition-Dashboard/doc/main/api/web/openapi.yml --output src/codegen/web-api-client",
-    "dev": "run-s codegen:* dev-only",
+    "check-type": "vue-tsc --build --force",
+    "codegen-web-api": "openapi-ts --output src/generated/web-api/ --input https://raw.githubusercontent.com/Basketball-Competition-Dashboard/doc/main/api/web/openapi.yml",
+    "dev": "run-s codegen-* dev-only",
     "dev-only": "vite dev",
     "format": "prettier --write .",
     "preview": "vite preview",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "test:unit": "vitest"
+    "test-e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
+    "test-e2e-dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "test-unit": "vitest"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "pinia": "2.1.7",
+    "vue": "3.4.27",
+    "vue-router": "4.3.2"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "0.46.3",
-    "@iconify/vue": "^4.1.2",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.12",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.5.1",
-    "cypress": "^13.9.0",
-    "jsdom": "^24.0.0",
-    "npm-run-all2": "^6.2.0",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.1",
-    "start-server-and-test": "^2.0.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.19"
+    "@iconify/vue": "4.1.2",
+    "@tsconfig/node20": "20.1.4",
+    "@types/jsdom": "21.1.6",
+    "@types/node": "20.12.12",
+    "@vitejs/plugin-vue": "5.0.4",
+    "@vue/test-utils": "2.4.6",
+    "@vue/tsconfig": "0.5.1",
+    "cypress": "13.9.0",
+    "jsdom": "24.0.0",
+    "npm-run-all2": "6.2.0",
+    "prettier": "3.2.5",
+    "sass": "1.77.1",
+    "start-server-and-test": "2.0.3",
+    "typescript": "5.4.5",
+    "vite": "5.2.11",
+    "vitest": "1.6.0",
+    "vue-tsc": "2.0.19"
   }
 }
