(feat): Add API Validation tests (ReadOnly)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev-only": "vite dev",
     "format": "prettier --write .",
     "preview": "python3 ../main.py",
-    "test-e2e-api-validation": "start-server-and-test preview http://127.0.0.1:5000 'cypress run --e2e --spec cypress/e2e/api-validation/**/*.test.ts'",
+    "test-e2e-api-val-readonly": "start-server-and-test preview http://127.0.0.1:5000 'cypress run --e2e --spec \"cypress/e2e/api-val-readonly/**/*.test.ts\"'",
     "test-unit": "vitest"
   },
   "dependencies": {
