--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "run-s codegen-* dev-only",
     "dev-only": "vite dev",
     "format": "prettier --write .",
-    "preview": "python3 ../Project/main.py",
+    "preview": "python3 ../main.py",
     "test-e2e": "run-s test-e2e-*",
     "test-e2e-api-impl-writeread": "start-server-and-test preview http://127.0.0.1:5000 'cypress run --e2e --spec \"cypress/e2e/api-impl-writeread/**/*.test.ts\"'",
     "test-e2e-api-stub-readonly": "start-server-and-test preview http://127.0.0.1:5000 'cypress run --e2e --spec \"cypress/e2e/api-stub-readonly/**/*.test.ts\"'",
