--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test-unit": "vitest"
   },
   "dependencies": {
+    "@unhead/vue": "1.9.14",
     "pinia": "2.1.7",
     "vue": "3.4.27",
     "vue-router": "4.3.2"
