--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hey-api/openapi-ts": "0.46.3",
     "@iconify/vue": "4.1.2",
     "@tsconfig/node20": "20.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsdom": "21.1.6",
     "@types/node": "20.12.12",
     "@vitejs/plugin-vue": "5.0.4",
