--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@unhead/vue": "1.9.14",
     "cute-alert": "0.0.3",
+    "js-cookie": "3.0.5",
     "pinia": "2.1.7",
     "vue": "3.4.27",
     "vue-router": "4.3.2"
